examples/spire-sidecar/route.py.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2021-11-24T15:29:48Z"
  name: apps-ingress-pt6sm
  namespace: default
  ownerReferences:
  - apiVersion: networking.k8s.io/v1beta1
    controller: true
    kind: Ingress
    name: apps-ingress
    uid: a1f75842-a197-4485-a35c-77e7ba038009
  resourceVersion: "41943039"
  uid: 06b50929-ca24-4159-bc01-e656caaaf7da
spec:
  host: space-x04-9d995c4a8c7c5f281ce13d5467ff6a94-0000.eu-de.containers.appdomain.cloud
  path: /py
  port:
    targetPort: "8000"
  to:
    kind: Service
    name: apps
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2021-11-24T15:29:48Z"
      status: "True"
      type: Admitted
    host: space-x04-9d995c4a8c7c5f281ce13d5467ff6a94-0000.eu-de.containers.appdomain.cloud
    routerCanonicalHostname: space-x04-9d995c4a8c7c5f281ce13d5467ff6a94-0000.eu-de.containers.appdomain.cloud
    routerName: default
    wildcardPolicy: None
